# LearnToCode

./: .gitattributes  .gitignore
C Projects/Geeksforgeeks/Bank Account System/: .gitignore  CMakeLists.txt  Login Data.csv  main.c
C Projects/Geeksforgeeks/Bank Account System/Output/: Login Data.csv
C Projects/Geeksforgeeks/Bank Account System/Src/: main.c
C Projects/Snake/: CMakeLists.txt  main.c
C#/Calculator/: Calculator.csproj  Calculator.sln  Form1.Designer.cs  Form1.cs  Structur.md
C#/ConsolenTest/: ConsolenTest.sln
C#/Project_Euler/: .gitignore  Program.cs  Project_Euler.csproj  Project_Euler.sln
Javascript Projects/Bricks/: index.html
Javascript Projects/Lu/: frankys.html  frantic.html  index.html  styles.css
Javascript Projects/Snake/: index.html  snake.md
Javascript Projects/TicTacToe/: index.html  styles.css  tictactoe.js
Javascript/Lu's verrückte Spielwelt/: manifest.json  styles.css
Python Projects/Codewars/: Codewars.ipynb
Python Projects/Embedded Projects/Smart Home Simulation/: CMakeLists.txt  main.c  main.py
Python Projects/Embedded Projects/Smart Home Simulation/logic/Inc/: app.h  sensor.h
Python Projects/Embedded Projects/Smart Home Simulation/logic/Src/: app.c  main.c  sensor.c
Python Projects/Games/: progress.md
Python Projects/Hackinscience/: Exercise.py
Python Projects/Projekt Euler/: ProjectEuler.ipynb
Python/Buffer/: main.py
Python/Edit_csv_File/: main.py
Python/Project Euler/: Problem_7.py  main.py
STM32 Projects/: .project  dictonary.txt
docs/: index.html  styles.css  tictactoe.js
docs/js/: index.js  (+1 more)
(+215 files in other folders)
